# blueOcean

./: .gitignore  app.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  streamlit_app.py
.codex/: AGENTS.md
.devcontainer/: .dockerfile  compose.yaml  devcontainer.json  post-create.sh
.github/: pull_request_template.md
blueOcean/: __init__.py  backtest.py  database.py  indicators.py  logging.py  nbconvert_preprocessors.py  ohlcv.py  process.py  strategies.py  streamlit_pages.py
blueOcean/application/: accessors.py  analyzers.py  broker.py  di.py  dto.py  factories.py  feed.py  mapper.py  notifiers.py  playground.py  services.py  store.py  usecase.py  usecases.py  warmup.py  workers.py
blueOcean/core/: strategies.py
blueOcean/domain/: account.py  bot.py  context.py  ohlcv.py  playground.py  session.py  strategy.py
blueOcean/field/: app.py  decorators.py  service.py  usecase.py  widgets.py
blueOcean/infra/: accessors.py  factories.py  fetchers.py  logging.py  settings.py  stores.py
blueOcean/presentation/: app.py  layout.py  notifiers.py  pages.py  reporting.py  scopes.py  states.py  utils.py  web.py  widgets.py
blueOcean/shared/: registries.py
docs/: index.md
docs/specs/: data-storage.md  strategies.md  system-overview.md  ui-flet.md  usecases.md
docs/uml/: activities_backtest.puml  activities_data_fetch.puml  activities_realtime_trade.puml  modules.puml  sequence_backtest.puml  sequence_realtime_trade.puml
fetcher/: fetch_from_ccxt_historical_data.ipynb  fetch_from_mt5_historical_data.ipynb  parse_from_csv_historycal_data.ipynb
tests/: conftest.py  test_backtest.py  test_markdown_inline_preprocessor.py  test_streamlit_pages.py
tests/application/: test_playground_parameters.py  test_warmup_flow.py
tests/domain/: test_account.py  test_bot.py  (+1 more)
(+53 files in other folders)
