[project]
name = "blueOcean"
version = "0.1.0"
dependencies = [
    "pandas",
    "plotly",
    "numpy",
    "backtrader",
    "logging",
    "python-dotenv",
    "influxdb-client",
    "nbconvert",
    "nbformat",
]
[tool.setuptools.packages.find]
exclude = [
    "data/",
    "fetcher/",
    "notebooks/"
]
