[project]
name = "blueOcean"
version = "0.1.0"
dependencies = [
    "pandas",
    "pandas-ta",
    "numpy",
    "duckdb",
    "pyarrow",
    "scikit-learn",
    "sktime",
    "pmdarima",
    "prophet",
    "matplotlib",
    "plotly",
    "ccxt==4.5.10",
    "backtrader",
    "backtrader_plotting",
    "oandapyV20",
    "nbformat>=4.2.0",
    "nbconvert",
    "ipykernel",
    "flet",
    "flet-desktop",
    "flet-route",
    "quantstats",
    "logging",
    "python-dotenv",
    "tenacity",
    "pytest",
    "peewee",
    "cuid2",
    "injector",
    "isort",
]

[tool.setuptools.packages.find]
exclude = [
    "data/",
    "fetcher/",
    "notebooks/"
]
