[project]
name = "blueOcean"
version = "0.1.0"
requires-python = "~=3.13"

dependencies = [
    "pandas",
    "pandas-ta",
    "numpy",
    "duckdb",
    "pyarrow",
    "scikit-learn",
    "sktime",
    "pmdarima",
    "prophet",
    "matplotlib",
    "plotly",
    "ccxt==4.5.10",
    "backtrader",
    "backtrader_plotting",
    "nbformat>=4.2.0",
    "nbconvert",
    "ipykernel",
    "quantstats",
    "logging",
    "python-dotenv",
    "tenacity",
    "pytest",
    "peewee",
    "cuid2",
    "injector",
    "isort",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
]

[tool.setuptools.packages.find]
exclude = [
    "data/",
    "fetcher/",
    "notebooks/"
]
